CVS-20100422
+ final updates

CVS-20100420
+ remove DEBUG_FORCES from pair and eam force calculation
+ prepare for release, minor changes

CVS-20100416
+ import force_adp.c, energy is working, forces are still missing
+ stens -> sym_tens

CVS-20100415
+ new force-file forces_dipole.c added needed for option DIPOLE

CVS-20100414
+ [APOT] chemical potentials are now disabled by default, can be enabled with
		 "enable_cp 1" in parameter file
+ potfit now forces the correct ntypes-setting in the parameter file
+ new information in potential files: #T <interaction>, e.g. #T EAM
+ new potential morse-stretch added
+ charge-extension for ms- and lj-potential
+ option DIPOLE implemented (including new parameters, new functions erfc and calc_forces_dipole)

CVS-20100408
+ Actually, there are elements with only one letter

CVS-20100330
+ vektor -> vector
+ first preparations for ADP potentials
+ fix seed option, it actually never worked

CVS-20100312
+ fix simann for tabulated potentials

CVS-20100224
+ add d_eps parameter as an error margin in powell_lsq, can be set in param file
	via d_eps
+ write error report to a file (output_prefix.error)
	grep for "RMS" for force, energy, stress rms-error and total error sum in one line
+ cleaned up header file potfit.h
+ flagfile will be deleted if fit is terminated
+ [APOT] the punishment for bad parameters is controlled via "apot_punish" in parameter file
	default value is 0
	This applies only to restrictions, not for parameters out of bounds !

CVS-20100218
+ bump copyright years to 2010
+ [APOT] add a few new analytic potential functions

CVS-20100204
+ [MEAM] initial commit

CVS-20100204
+ [APOT] added support for global parameters, beta stage
+ [APOT] write correct embedding function for imd potentials
+ [APOT] fix parameter check
+ [general] more code cleanup, add some comments

CVS-20100125
+ split up force calculation in different files
+ update Makefile for EAM/MEAM and PAIR targets