@@ -3,15 +3,14 @@
 * force.c: Routines used for calculating forces/energies in various
 *     interpolation schemes.
 *
-*****************************************************************/
+*********************************************************************************/
 /*
-*   Copyright 2002-2010 Peter Brommer, Franz G"ahler, Daniel Schopf,
-*                       Philipp Beck
+*   Copyright 2002-2010 Peter Brommer, Franz G"ahler, Daniel Schopf, Philipp Beck
 *             Institute for Theoretical and Applied Physics
 *             University of Stuttgart, D-70550 Stuttgart, Germany
 *             http://www.itap.physik.uni-stuttgart.de/
 *
-*****************************************************************/
+*********************************************************************************/
 /*
 *   This file is part of potfit.
 *
@@ -31,8 +30,8 @@
 *   Boston, MA  02110-1301  USA
 */
 /****************************************************************
-* $Revision: 1.1 $
-* $Date: 2010/04/15 10:23:21 $
+* $Revision: 1.2 $
+* $Date: 2010/04/22 13:29:40 $
 *****************************************************************/
 
 #ifdef DIPOLE
@@ -92,10 +91,6 @@ real calc_forces_dipole(real *xi_opt, real *forces, int flag)
   real  tmpsum, sum = 0.;
   int   first, col1, i;
   real *xi = NULL;
-
-#if defined DEBUG && defined FORCES
-  real  store_punish;
-#endif
 
   switch (format) {
       case 0:
@@ -212,17 +207,11 @@ real calc_forces_dipole(real *xi_opt, real *forces, int flag)
 
 	/* 2nd loop: calculate pair forces and energies */
 	for (i = 0; i < inconf[h]; i++) {
-#if defined DEBUG && defined FORCES
-	  fprintf(stderr, "\nWorking on atom %d\n", i);
-#endif
 	  atom = conf_atoms + i + cnfstart[h] - firstatom;
 	  typ1 = atom->typ;
 	  k = 3 * (cnfstart[h] + i);
 	  /* loop over neighbours */
 	  for (j = 0; j < atom->n_neigh; j++) {
-#if defined DEBUG && defined FORCES
-	    fprintf(stderr, "Working on atom %d neighbour %d\n", i, j);
-#endif
 	    neigh = atom->neigh + j;
 	    /* only use neigbours with higher numbers,
 	       others are calculated by actio=reactio */
@@ -254,10 +243,6 @@ real calc_forces_dipole(real *xi_opt, real *forces, int flag)
 		}
 		forces[energy_p + h] += fnval;
 
-#if defined DEBUG && defined FORCES
-		fprintf(stderr, "pair-energy=%f\n", fnval);
-#endif
-
 		if (uf) {
 		  tmp_force.x = neigh->dist.x * grad;
 		  tmp_force.y = neigh->dist.y * grad;
@@ -265,10 +250,6 @@ real calc_forces_dipole(real *xi_opt, real *forces, int flag)
 		  forces[k] += tmp_force.x;
 		  forces[k + 1] += tmp_force.y;
 		  forces[k + 2] += tmp_force.z;
-#if defined DEBUG && defined FORCES
-		  fprintf(stderr, "forces %d %f %f %f\n", k, forces[k],
-			  forces[k + 1], forces[k + 2]);
-#endif
 		  l = 3 * neigh->nr;	/* actio = reactio */
 		  forces[l] -= tmp_force.x;
 		  forces[l + 1] -= tmp_force.y;
@@ -306,10 +287,6 @@ real calc_forces_dipole(real *xi_opt, real *forces, int flag)
 	    tmpsum +=
 	      conf_weight[h] * (SQR(forces[k]) + SQR(forces[k + 1]) +
 				SQR(forces[k + 2]));
-#if defined DEBUG && defined FORCES
-	    fprintf(stderr, "k=%d forces %f %f %f tmpsum=%f\n", k, forces[k],
-		    forces[k + 1], forces[k + 2], tmpsum);
-#endif
 	  }
 	}			/* second loop over atoms */
 
@@ -317,10 +294,6 @@ real calc_forces_dipole(real *xi_opt, real *forces, int flag)
 	forces[energy_p + h] *= eweight / (real)inconf[h];
 	forces[energy_p + h] -= force_0[energy_p + h];
 	tmpsum += conf_weight[h] * SQR(forces[energy_p + h]);
-#if defined DEBUG && defined FORCES
-	fprintf(stderr, "energy: tmpsum=%f energy=%f\n", tmpsum,
-		forces[energy_p + h]);
-#endif
 #ifdef STRESS
 	/* stress contributions */
 	if (uf && us) {
@@ -340,11 +313,6 @@ real calc_forces_dipole(real *xi_opt, real *forces, int flag)
     /* add punishment for out of bounds (mostly for powell_lsq) */
     if (myid == 0) {
       tmpsum += apot_punish(xi_opt, forces);
-#if defined DEBUG && defined FORCES
-      fprintf(stderr, "\napot punishments: tmpsum=%f punish=%f\n", tmpsum,
-	      apot_punish(xi_opt, forces));
-      store_punish = tmpsum;
-#endif
     }
 #endif
 
